--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,7 +6,7 @@
   padding: 7px 12px;
   font-weight: 500;
   background: none;
-  border: 2px solid #1e58ff;
-  color: #1e58ff;
+  border: 2px solid #000;
+  color: #000;
   cursor: pointer;
 }
