--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,19 +1,16 @@
 .wrapper {
-  padding: 70px 80px 50px;
-  top: 10%;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  width: 60vw;
-  background-color: white;
-  box-shadow: 0 20px 40px -5px rgba(#1e58ff, .3);
   position: fixed;
+  padding: 30px 40px;
+  right: 0;
+  width: 40vw;
+  height: 100vh;
+  background-color: white;
+  box-shadow: 0 20px 40px -5px rgba(#818181, .3);
 }
 
 .closeButton {
   width: 27px;
   height: 27px;
-  background: #1e58ff;
   border: none; 
   position: absolute;
   right: 30px;
