--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -12,3 +12,15 @@
   height: 50px;
 	width: 50px;
 }
+
+.secondary {
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  background-color: #FFD829;
+  font-weight: 700;
+  padding: 7px 5px;
+  width: 120px;
+  font-size: .8em;
+  margin-top: 30px;
+}
