--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,24 +1,18 @@
 .formItem {
     width: 100%;
-    margin: 24px 0;
     position: relative;
     flex-shrink: 0;
-}
-  
-.formItemBar {
-    width: 100%;
-    height: 2px;
-    background: #7d7d7d;
-    transition: 0.1s all;
+    margin-top: 40px;
 }
   
 .label {
     color: #7d7d7d;
     position: absolute;
-    top: 3px;
-    left: 0;
+    top: 10px;
+    left: 20px;
     transition: 0.2s ease-out all;
-    font-size: 16px;
+    font-size: 12px;
+    text-transform: uppercase;
 }
   
 .input,
@@ -26,14 +20,16 @@
     color: #7d7d7d;
     font-size: 16px;
     border: none;
+    border-radius: 10px;
     line-height: 22px;
     width: 100%;
-    background: none;
+    background: rgba(#818181, 0.1);
+    padding: 5px;
 }
   
 .textarea {
     resize: none;
-    min-height: 150px;
+    min-height: 250px;
 }
   
 .input:focus,
@@ -51,9 +47,4 @@
 .textarea:not(:placeholder-shown) + .label {
     top: -22px;
     font-size: 13px;
-}
-  
-.input:focus ~ .formItemBar,
-.textarea:focus ~ .formItemBar {
-    background: #1e58ff;
 }
