--- a/src/components/List/ListItem.module.scss
+++ b/src/components/List/ListItem.module.scss
@@ -11,14 +11,27 @@
   
 .wrapper {
     list-style: none;
-    padding: 0 30px 50px 0;
-    display: flex;
-    align-items: center;
     position: relative;
     animation: appear .5s ease;
+    box-shadow: 0 10px 20px -5px rgba(#818181, .3);
+    border-radius: 10px;
+    max-width: 400px;
+    margin: 40px;
+}
+
+.title {
+  padding: 10px;
+  background-color: #FFD829;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .description {
     margin: 10px 0 20px;
     font-weight: 300;
+    padding: 10px;
+}
+
+.button {
+  margin: 15px 10px 20px;
 }
