--- a/src/components/List/ListItem.module.scss
+++ b/src/components/List/ListItem.module.scss
@@ -10,12 +10,15 @@
 }
   
 .wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     list-style: none;
     position: relative;
     animation: appear .5s ease;
     box-shadow: 0 10px 20px -5px rgba(#818181, .3);
     border-radius: 10px;
-    max-width: 400px;
+    width: 400px;
     margin: 40px;
 }
 
